--- a/public/basket.html
+++ b/public/basket.html
@@ -191,7 +191,18 @@
     <!-- MAIN -->
     <main>
       <section class="max-w-base mx-auto mt-6 px-4 md:px-7">
-        <h3>Корзина</h3>
+        <div>
+          <!-- Left -->
+          <div>
+            <h3>Корзина</h3>
+            <div>
+              <div class="flex items-center space-x-2">
+                <input type="checkbox" id="select-all" class="checkbox-custom">
+                <label for="select-all" class="custom-label">Выбрать все</label>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <!-- FOOTER -->
