--- a/public/catalog-factory.html
+++ b/public/catalog-factory.html
@@ -773,37 +773,37 @@
                   <div class="space-y-2 mt-2">
                     <!-- 1 -->
                     <div class="w-max cursor-pointer flex items-center gap-2">
-                      <input type="checkbox" id="factory1" checked>
+                      <input class="custom-checkbox" type="checkbox" id="factory1" checked>
                       <label for="factory1"></label>
                       <label for="factory1" class="cursor-pointer text-sm/4">Черный чай</label>
                     </div>
                     <!-- 2 -->
                     <div class="w-max cursor-pointer flex items-center gap-2">
-                      <input type="checkbox" id="factory2">
+                      <input class="custom-checkbox" type="checkbox" id="factory2">
                       <label for="factory2"></label>
                       <label for="factory2" class="cursor-pointer text-sm/4">Зеленый чай</label>
                     </div>
                     <!-- 3 -->
                     <div class="w-max cursor-pointer flex items-center gap-2">
-                      <input type="checkbox" id="factory3">
+                      <input class="custom-checkbox" type="checkbox" id="factory3">
                       <label for="factory3"></label>
                       <label for="factory3" class="cursor-pointer text-sm/4">Улун</label>
                     </div>
                     <!-- 4 -->
                     <div class="w-max cursor-pointer flex items-center gap-2">
-                      <input type="checkbox" id="factory4">
+                      <input class="custom-checkbox" type="checkbox" id="factory4">
                       <label for="factory4"></label>
                       <label for="factory4" class="cursor-pointer text-sm/4">Фруктовый</label>
                     </div>
                     <!-- 5 -->
                     <div class="w-max cursor-pointer flex items-center gap-2">
-                      <input type="checkbox" id="factory5">
+                      <input class="custom-checkbox" type="checkbox" id="factory5">
                       <label for="factory5"></label>
                       <label for="factory5" class="cursor-pointer text-sm/4">Пуэр</label>
                     </div>
                     <!-- 6 -->
                     <div class="w-max cursor-pointer flex items-center gap-2">
-                      <input type="checkbox" id="factory6">
+                      <input class="custom-checkbox" type="checkbox" id="factory6">
                       <label for="factory6"></label>
                       <label for="factory6" class="cursor-pointer text-sm/4">Добавки</label>
                     </div>
@@ -823,13 +823,13 @@
                   <div class="space-y-2 mt-2">
                     <!-- 7 -->
                     <div class="w-max cursor-pointer flex items-center gap-2">
-                      <input type="checkbox" id="factory7" checked>
+                      <input class="custom-checkbox" type="checkbox" id="factory7" checked>
                       <label for="factory7"></label>
                       <label for="factory7" class="cursor-pointer text-sm/4">Листовой</label>
                     </div>
                     <!-- 8 -->
                     <div class="w-max cursor-pointer flex items-center gap-2">
-                      <input type="checkbox" id="factory8">
+                      <input class="custom-checkbox" type="checkbox" id="factory8">
                       <label for="factory8"></label>
                       <label for="factory8" class="cursor-pointer text-sm/4">Прессованный</label>
                     </div>
@@ -849,19 +849,19 @@
                   <div class="space-y-2 mt-2">
                     <!-- 9 -->
                     <div class="w-max cursor-pointer flex items-center gap-2">
-                      <input type="checkbox" id="factory9" checked>
+                      <input class="custom-checkbox" type="checkbox" id="factory9" checked>
                       <label for="factory9"></label>
                       <label for="factory9" class="cursor-pointer text-sm/4">Есть в наличии</label>
                     </div>
                     <!-- 10 -->
                     <div class="w-max cursor-pointer flex items-center gap-2">
-                      <input type="checkbox" id="factory10">
+                      <input class="custom-checkbox" type="checkbox" id="factory10">
                       <label for="factory10"></label>
                       <label for="factory10" class="cursor-pointer text-sm/4">Под заказ</label>
                     </div>
                     <!-- 11 -->
                     <div class="w-max cursor-pointer flex items-center gap-2">
-                      <input type="checkbox" id="factory11">
+                      <input class="custom-checkbox" type="checkbox" id="factory11">
                       <label for="factory11"></label>
                       <label for="factory11" class="cursor-pointer text-sm/4">Предзаказ (от 10 дней)</label>
                     </div>
