--- a/public/catalog.html
+++ b/public/catalog.html
@@ -821,37 +821,37 @@
                   <div class="space-y-2 mt-2">
                     <!-- 1 -->
                     <div class="w-max cursor-pointer flex items-center gap-2">
-                      <input type="checkbox" id="test1" checked>
+                      <input class="custom-checkbox" type="checkbox" id="test1" checked>
                       <label for="test1"></label>
                       <label for="test1" class="cursor-pointer text-sm/4">Черный чай</label>
                     </div>
                     <!-- 2 -->
                     <div class="w-max cursor-pointer flex items-center gap-2">
-                      <input type="checkbox" id="test2">
+                      <input class="custom-checkbox" type="checkbox" id="test2">
                       <label for="test2"></label>
                       <label for="test2" class="cursor-pointer text-sm/4">Зеленый чай</label>
                     </div>
                     <!-- 3 -->
                     <div class="w-max cursor-pointer flex items-center gap-2">
-                      <input type="checkbox" id="test3">
+                      <input class="custom-checkbox" type="checkbox" id="test3">
                       <label for="test3"></label>
                       <label for="test3" class="cursor-pointer text-sm/4">Улун</label>
                     </div>
                     <!-- 4 -->
                     <div class="w-max cursor-pointer flex items-center gap-2">
-                      <input type="checkbox" id="test4">
+                      <input class="custom-checkbox" type="checkbox" id="test4">
                       <label for="test4"></label>
                       <label for="test4" class="cursor-pointer text-sm/4">Фруктовый</label>
                     </div>
                     <!-- 5 -->
                     <div class="w-max cursor-pointer flex items-center gap-2">
-                      <input type="checkbox" id="test5">
+                      <input class="custom-checkbox" type="checkbox" id="test5">
                       <label for="test5"></label>
                       <label for="test5" class="cursor-pointer text-sm/4">Пуэр</label>
                     </div>
                     <!-- 6 -->
                     <div class="w-max cursor-pointer flex items-center gap-2">
-                      <input type="checkbox" id="test6">
+                      <input class="custom-checkbox" type="checkbox" id="test6">
                       <label for="test6"></label>
                       <label for="test6" class="cursor-pointer text-sm/4">Добавки</label>
                     </div>
@@ -871,13 +871,13 @@
                   <div class="space-y-2 mt-2">
                     <!-- 7 -->
                     <div class="w-max cursor-pointer flex items-center gap-2">
-                      <input type="checkbox" id="test7" checked>
+                      <input class="custom-checkbox" type="checkbox" id="test7" checked>
                       <label for="test7"></label>
                       <label for="test7" class="cursor-pointer text-sm/4">Листовой</label>
                     </div>
                     <!-- 8 -->
                     <div class="w-max cursor-pointer flex items-center gap-2">
-                      <input type="checkbox" id="test8">
+                      <input class="custom-checkbox" type="checkbox" id="test8">
                       <label for="test8"></label>
                       <label for="test8" class="cursor-pointer text-sm/4">Прессованный</label>
                     </div>
@@ -897,19 +897,19 @@
                   <div class="space-y-2 mt-2">
                     <!-- 9 -->
                     <div class="w-max cursor-pointer flex items-center gap-2">
-                      <input type="checkbox" id="test9" checked>
+                      <input class="custom-checkbox" type="checkbox" id="test9" checked>
                       <label for="test9"></label>
                       <label for="test9" class="cursor-pointer text-sm/4">Есть в наличии</label>
                     </div>
                     <!-- 10 -->
                     <div class="w-max cursor-pointer flex items-center gap-2">
-                      <input type="checkbox" id="test10">
+                      <input class="custom-checkbox" type="checkbox" id="test10">
                       <label for="test10"></label>
                       <label for="test10" class="cursor-pointer text-sm/4">Под заказ</label>
                     </div>
                     <!-- 11 -->
                     <div class="w-max cursor-pointer flex items-center gap-2">
-                      <input type="checkbox" id="test11">
+                      <input class="custom-checkbox" type="checkbox" id="test11">
                       <label for="test11"></label>
                       <label for="test11" class="cursor-pointer text-sm/4">Предзаказ (от 10 дней)</label>
                     </div>
