--- a/public/map.html
+++ b/public/map.html
@@ -510,37 +510,37 @@
                   <div class="space-y-2 mt-2">
                     <!-- 1 -->
                     <div class="w-max cursor-pointer flex items-center gap-2">
-                      <input type="checkbox" id="map-label1" checked>
+                      <input class="custom-checkbox" type="checkbox" id="map-label1" checked>
                       <label for="map-label1"></label>
                       <label for="map-label1" class="cursor-pointer text-sm/4">Черный чай</label>
                     </div>
                     <!-- 2 -->
                     <div class="w-max cursor-pointer flex items-center gap-2">
-                      <input type="checkbox" id="map-label2">
+                      <input class="custom-checkbox" type="checkbox" id="map-label2">
                       <label for="map-label2"></label>
                       <label for="map-label2" class="cursor-pointer text-sm/4">Зеленый чай</label>
                     </div>
                     <!-- 3 -->
                     <div class="w-max cursor-pointer flex items-center gap-2">
-                      <input type="checkbox" id="map-label3">
+                      <input class="custom-checkbox" type="checkbox" id="map-label3">
                       <label for="map-label3"></label>
                       <label for="map-label3" class="cursor-pointer text-sm/4">Улун</label>
                     </div>
                     <!-- 4 -->
                     <div class="w-max cursor-pointer flex items-center gap-2">
-                      <input type="checkbox" id="map-label4">
+                      <input class="custom-checkbox" type="checkbox" id="map-label4">
                       <label for="map-label4"></label>
                       <label for="map-label4" class="cursor-pointer text-sm/4">Фруктовый</label>
                     </div>
                     <!-- 5 -->
                     <div class="w-max cursor-pointer flex items-center gap-2">
-                      <input type="checkbox" id="map-label5">
+                      <input class="custom-checkbox" type="checkbox" id="map-label5">
                       <label for="map-label5"></label>
                       <label for="map-label5" class="cursor-pointer text-sm/4">Пуэр</label>
                     </div>
                     <!-- 6 -->
                     <div class="w-max cursor-pointer flex items-center gap-2">
-                      <input type="checkbox" id="map-label6">
+                      <input class="custom-checkbox" type="checkbox" id="map-label6">
                       <label for="map-label6"></label>
                       <label for="map-label6" class="cursor-pointer text-sm/4">Добавки</label>
                     </div>
@@ -560,13 +560,13 @@
                   <div class="space-y-2 mt-2">
                     <!-- 7 -->
                     <div class="w-max cursor-pointer flex items-center gap-2">
-                      <input type="checkbox" id="map-label7" checked>
+                      <input class="custom-checkbox" type="checkbox" id="map-label7" checked>
                       <label for="map-label7"></label>
                       <label for="map-label7" class="cursor-pointer text-sm/4">Листовой</label>
                     </div>
                     <!-- 8 -->
                     <div class="w-max cursor-pointer flex items-center gap-2">
-                      <input type="checkbox" id="map-label8">
+                      <input class="custom-checkbox" type="checkbox" id="map-label8">
                       <label for="map-label8"></label>
                       <label for="map-label8" class="cursor-pointer text-sm/4">Прессованный</label>
                     </div>
@@ -586,19 +586,19 @@
                   <div class="space-y-2 mt-2">
                     <!-- 9 -->
                     <div class="w-max cursor-pointer flex items-center gap-2">
-                      <input type="checkbox" id="map-label9" checked>
+                      <input class="custom-checkbox" type="checkbox" id="map-label9" checked>
                       <label for="map-label9"></label>
                       <label for="map-label9" class="cursor-pointer text-sm/4">Есть в наличии</label>
                     </div>
                     <!-- 10 -->
                     <div class="w-max cursor-pointer flex items-center gap-2">
-                      <input type="checkbox" id="map-label10">
+                      <input class="custom-checkbox" type="checkbox" id="map-label10">
                       <label for="map-label10"></label>
                       <label for="map-label10" class="cursor-pointer text-sm/4">Под заказ</label>
                     </div>
                     <!-- 11 -->
                     <div class="w-max cursor-pointer flex items-center gap-2">
-                      <input type="checkbox" id="map-label11">
+                      <input class="custom-checkbox" type="checkbox" id="map-label11">
                       <label for="map-label11"></label>
                       <label for="map-label11" class="cursor-pointer text-sm/4">Предзаказ (от 10 дней)</label>
                     </div>
