--- a/public/news.html
+++ b/public/news.html
@@ -196,7 +196,7 @@
         <!-- The Art Of Transformation -->
         <section class="lg:border-t pt-4 lg:pt-8 lg:mt-6">
           <div class="w-full max-w-[57.5rem]">
-            <h2 class="max-w-[48.5625rem] text-2xl lg:text-28">Искусство трансформации: как хранение меняет вкус шу
+            <h2 class="max-w-[48.5625rem] text-2xl lg:text-twenty-eight">Искусство трансформации: как хранение меняет вкус шу
               пуэрадля примера очень
               длинное название</h2>
             <p class="text-brand-dark lg:text-xl mt-4 lg:pr-10">
