--- a/public/index.html
+++ b/public/index.html
@@ -607,7 +607,7 @@
           </div>
         </section>
         <!-- News And Posts For SEO -->
-        <section class="pt-10 lg:pt-14 lg:pb-28">
+        <section class="pt-10 lg:pt-14 lg:pb-twenty-eight">
           <h2>Новости и записи для сео</h2>
           <div class="overflow-x-auto no-scroll mt-4 lg:mt-6 -mx-4 pl-4 md:pl-7 lg:pl-0 md:-mx-7 lg:mx-0">
             <div class="flex gap-5 lg:gap-30">
