--- a/public/reviews.html
+++ b/public/reviews.html
@@ -682,7 +682,7 @@
             class="text-brand-black-300 w-10 h-full transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">2</button>
 
           <button
-            class="-translate-y-1/2 text-brand-black-300 w-10 h-full transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">3</button>
+            class="text-brand-black-300 w-10 h-full transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">3</button>
           <!-- Next btn -->
           <button
             class="text-brand-black-300 w-20 lg:w-24 h-42 transition duration-200 hover:bg-gray-100 border-l px-2.5 py-1">Next</button>
