--- a/public/articles-news.html
+++ b/public/articles-news.html
@@ -203,7 +203,7 @@
               <div class="pt-2 p-4">
                 <span class="text-xs text-brand-black-300">10.10.2022</span>
                 <h5 class="font-medium line-clamp-1">Стерилизация и дезинфекция</h5>
-                <p class="text-brand-black-400 text-xs lg:text-15 line-clamp-3 mt-2">
+                <p class="text-brand-black-400 text-15 line-clamp-3 mt-2">
                   Стерилизация и дезинфекция — важные этапы обработки инструментов, позволяющие сделать любые...
                 </p>
                 <div class="flex items-center gap-3 mt-4">
@@ -228,7 +228,7 @@
               <div class="pt-2 p-4">
                 <span class="text-xs text-brand-black-300">10.10.2022</span>
                 <h5 class="font-medium line-clamp-1">Стерилизация и дезинфекция</h5>
-                <p class="text-brand-black-400 text-xs lg:text-15 line-clamp-3 mt-2">
+                <p class="text-brand-black-400 text-15 line-clamp-3 mt-2">
                   Стерилизация и дезинфекция — важные этапы обработки инструментов, позволяющие сделать любые...
                 </p>
                 <div class="flex items-center gap-3 mt-4">
@@ -253,7 +253,7 @@
               <div class="pt-2 p-4">
                 <span class="text-xs text-brand-black-300">10.10.2022</span>
                 <h5 class="font-medium line-clamp-1">Стерилизация и дезинфекция</h5>
-                <p class="text-brand-black-400 text-xs lg:text-15 line-clamp-3 mt-2">
+                <p class="text-brand-black-400 text-15 line-clamp-3 mt-2">
                   Стерилизация и дезинфекция — важные этапы обработки инструментов, позволяющие сделать любые...
                 </p>
                 <div class="flex items-center gap-3 mt-4">
@@ -278,7 +278,7 @@
               <div class="pt-2 p-4">
                 <span class="text-xs text-brand-black-300">10.10.2022</span>
                 <h5 class="font-medium line-clamp-1">Стерилизация и дезинфекция</h5>
-                <p class="text-brand-black-400 text-xs lg:text-15 line-clamp-3 mt-2">
+                <p class="text-brand-black-400 text-15 line-clamp-3 mt-2">
                   Стерилизация и дезинфекция — важные этапы обработки инструментов, позволяющие сделать любые...
                 </p>
                 <div class="flex items-center gap-3 mt-4">
@@ -303,7 +303,7 @@
               <div class="pt-2 p-4">
                 <span class="text-xs text-brand-black-300">10.10.2022</span>
                 <h5 class="font-medium line-clamp-1">Стерилизация и дезинфекция</h5>
-                <p class="text-brand-black-400 text-xs lg:text-15 line-clamp-3 mt-2">
+                <p class="text-brand-black-400 text-15 line-clamp-3 mt-2">
                   Стерилизация и дезинфекция — важные этапы обработки инструментов, позволяющие сделать любые...
                 </p>
                 <div class="flex items-center gap-3 mt-4">
@@ -328,7 +328,7 @@
               <div class="pt-2 p-4">
                 <span class="text-xs text-brand-black-300">10.10.2022</span>
                 <h5 class="font-medium line-clamp-1">Стерилизация и дезинфекция</h5>
-                <p class="text-brand-black-400 text-xs lg:text-15 line-clamp-3 mt-2">
+                <p class="text-brand-black-400 text-15 line-clamp-3 mt-2">
                   Стерилизация и дезинфекция — важные этапы обработки инструментов, позволяющие сделать любые...
                 </p>
                 <div class="flex items-center gap-3 mt-4">
@@ -353,7 +353,7 @@
               <div class="pt-2 p-4">
                 <span class="text-xs text-brand-black-300">10.10.2022</span>
                 <h5 class="font-medium line-clamp-1">Стерилизация и дезинфекция</h5>
-                <p class="text-brand-black-400 text-xs lg:text-15 line-clamp-3 mt-2">
+                <p class="text-brand-black-400 text-15 line-clamp-3 mt-2">
                   Стерилизация и дезинфекция — важные этапы обработки инструментов, позволяющие сделать любые...
                 </p>
                 <div class="flex items-center gap-3 mt-4">
@@ -378,7 +378,7 @@
               <div class="pt-2 p-4">
                 <span class="text-xs text-brand-black-300">10.10.2022</span>
                 <h5 class="font-medium line-clamp-1">Стерилизация и дезинфекция</h5>
-                <p class="text-brand-black-400 text-xs lg:text-15 line-clamp-3 mt-2">
+                <p class="text-brand-black-400 text-15 line-clamp-3 mt-2">
                   Стерилизация и дезинфекция — важные этапы обработки инструментов, позволяющие сделать любые...
                 </p>
                 <div class="flex items-center gap-3 mt-4">
@@ -403,7 +403,7 @@
               <div class="pt-2 p-4">
                 <span class="text-xs text-brand-black-300">10.10.2022</span>
                 <h5 class="font-medium line-clamp-1">Стерилизация и дезинфекция</h5>
-                <p class="text-brand-black-400 text-xs lg:text-15 line-clamp-3 mt-2">
+                <p class="text-brand-black-400 text-15 line-clamp-3 mt-2">
                   Стерилизация и дезинфекция — важные этапы обработки инструментов, позволяющие сделать любые...
                 </p>
                 <div class="flex items-center gap-3 mt-4">
@@ -421,7 +421,7 @@
             </a>
           </div>
           <!-- Paginatin -->
-          <div class="bg-white w-max h-8 lg:h-[2.375rem] flex items-center font-semibold text-center text-xs lg:text-15 border rounded-md overflow-hidden mt-5 lg:mt-8 mx-auto">
+          <div class="bg-white w-max h-8 lg:h-[2.375rem] flex items-center font-semibold text-center text-15 border rounded-md overflow-hidden mt-5 lg:mt-8 mx-auto">
             <!-- Previous -->
             <button
               class="text-brand-black-300 w-20 lg:w-24 h-42 transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">Previous</button>
@@ -490,35 +490,35 @@
             </div>
           </div>
           <!-- Main Wrapper -->
-          <div class="w-full max-w-[40.1875rem] flex flex-wrap sm:justify-between gap-5 text-brand-custom-gray">
+          <div class="w-full max-w-[40.1875rem] flex flex-col sm:flex-row sm:justify-between gap-5 text-brand-custom-gray">
             <!-- 1 -->
             <div class="w-1/2 sm:w-auto">
               <h5 class="font-semibold">Покупателям</h5>
               <div class="flex flex-col gap-2 mt-4 lg:mt-6">
-                <a class="transition duration-200 hover:opacity-75" href="#">Оплата и доставка</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Возврат товаров</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Вопросы и ответы</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Программа лояльности</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Оплата и доставка</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Возврат товаров</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Вопросы и ответы</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Программа лояльности</a>
               </div>
             </div>
             <!-- 2 -->
             <div class="w-auto">
               <h5 class="font-semibold">О компании</h5>
               <div class="flex flex-col gap-2 mt-4 lg:mt-6">
-                <a class="transition duration-200 hover:opacity-75" href="#">История</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Новости</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Вакансии</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Контакты</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">История</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Новости</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Вакансии</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Контакты</a>
               </div>
             </div>
             <!-- 3 -->
             <div class="w-auto">
               <h5 class="font-semibold">Юридическая информация</h5>
               <div class="flex flex-col gap-2 mt-4 lg:mt-6">
-                <a class="transition duration-200 hover:opacity-75" href="#">Реквизиты организации</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Лицензии и сертификаты</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Пользовательское соглашение</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Политика конфиденциальности</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Реквизиты организации</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Лицензии и сертификаты</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Пользовательское соглашение</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Политика конфиденциальности</a>
               </div>
             </div>
           </div>
