--- a/public/delivery.html
+++ b/public/delivery.html
@@ -192,7 +192,7 @@
       <section class="max-w-base mx-auto mt-6 px-4 md:px-7">
         <div class="bg-white rounded-md p-4 md:px-8 md:py-10">
           <h3>Доставка и оплата</h3>
-          <ul class="text-xs lg:text-15 mt-4 space-y-4">
+          <ul class="text-15 mt-4 space-y-4">
             <li>
               <p>
                 Вы можете оформить заказ на сумму от 600 рублей, мы доставим его в любой город до пункта выдачи или до
@@ -286,35 +286,35 @@
             </div>
           </div>
           <!-- Main Wrapper -->
-          <div class="w-full max-w-[40.1875rem] flex flex-wrap sm:justify-between gap-5 text-brand-custom-gray">
+          <div class="w-full max-w-[40.1875rem] flex flex-col sm:flex-row sm:justify-between gap-5 text-brand-custom-gray">
             <!-- 1 -->
             <div class="w-1/2 sm:w-auto">
               <h5 class="font-semibold">Покупателям</h5>
               <div class="flex flex-col gap-2 mt-4 lg:mt-6">
-                <a class="transition duration-200 hover:opacity-75" href="#">Оплата и доставка</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Возврат товаров</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Вопросы и ответы</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Программа лояльности</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Оплата и доставка</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Возврат товаров</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Вопросы и ответы</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Программа лояльности</a>
               </div>
             </div>
             <!-- 2 -->
             <div class="w-auto">
               <h5 class="font-semibold">О компании</h5>
               <div class="flex flex-col gap-2 mt-4 lg:mt-6">
-                <a class="transition duration-200 hover:opacity-75" href="#">История</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Новости</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Вакансии</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Контакты</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">История</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Новости</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Вакансии</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Контакты</a>
               </div>
             </div>
             <!-- 3 -->
             <div class="w-auto">
               <h5 class="font-semibold">Юридическая информация</h5>
               <div class="flex flex-col gap-2 mt-4 lg:mt-6">
-                <a class="transition duration-200 hover:opacity-75" href="#">Реквизиты организации</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Лицензии и сертификаты</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Пользовательское соглашение</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Политика конфиденциальности</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Реквизиты организации</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Лицензии и сертификаты</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Пользовательское соглашение</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Политика конфиденциальности</a>
               </div>
             </div>
           </div>
