--- a/public/page-card.html
+++ b/public/page-card.html
@@ -195,15 +195,15 @@
           <ul class="mt-4 space-y-4">
             <li>
               <h5 class="font-medium text-lg lg:text-xl">Бонусы за покупки.</h5>
-              <p class="text-xs lg:text-15 text-brand-dark">- Размер бонусов составляет 1% от стоимости товара.</p>
+              <p class="text-15 text-brand-dark">- Размер бонусов составляет 1% от стоимости товара.</p>
             </li>
             <li>
               <h5 class="font-medium text-lg lg:text-xl">Бонусы за отзывы о товаре.</h5>
-              <p class="text-xs lg:text-15 text-brand-dark">
+              <p class="text-15 text-brand-dark">
                 - За каждый отзыв о купленном товаре, начисляется по 30 баллов. <br>
                 (Кол-во отзывов соответствует купленным товарам. 1 товар - 1 отзыв.)
               </p>
-              <p class="text-xs lg:text-15 text-brand-dark">
+              <p class="text-15 text-brand-dark">
                 - За каждый отзыв о товаре, начисляется по 5 баллов. Количество отзывов не ограниченно. <br>
                 (Технический момент: Отзыв должен быть минимум 300 збп. и тд.)
               </p>
@@ -212,7 +212,7 @@
             <div>
               <button
                 class="button-green-outline w-full max-w-[43.0625rem] flex items-center justify-between gap-5 !rounded-md lg:pl-4 p-3">
-                <span class="text-xs lg:text-15 text-brand-dark">Подробнее</span>
+                <span class="text-15 text-brand-dark">Подробнее</span>
                 <svg class="shrink-0 rotate-180" width="11" height="7" viewBox="0 0 11 7" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <path
@@ -220,7 +220,7 @@
                     fill="#545454" />
                 </svg>
               </button>
-              <div class="w-full max-w-[45rem] text-brand-dark text-xs lg:text-15 mt-2 px-4 space-y-5">
+              <div class="w-full max-w-[45rem] text-brand-dark text-15 mt-2 px-4 space-y-5">
                 <p>
                   Спасибо, что оставляете отзывы и делитесь своим мнением о товарах и услугах нашего магазина. Отзывы
                   помогают вам и другим пользователям составить впечатление о товарах
@@ -291,22 +291,22 @@
             </div>
             <li>
               <h5 class="font-medium text-lg lg:text-xl">Скидка на разовую покупку.</h5>
-              <p class="text-xs lg:text-15 text-brand-dark">
+              <p class="text-15 text-brand-dark">
                 <span class="font-semibold">5%</span>
                 — при общей сумме вашего заказа более
                 <span class="font-semibold">5000 рублей.</span>
               </p>
-              <p class="text-xs lg:text-15 text-brand-dark">
+              <p class="text-15 text-brand-dark">
                 <span class="font-semibold">7%</span>
                 — при общей сумме вашего заказа более
                 <span class="font-semibold">7000 рублей.</span>
               </p>
-              <p class="text-xs lg:text-15 text-brand-dark">
+              <p class="text-15 text-brand-dark">
                 <span class="font-semibold">10%</span>
                 — при общей сумме вашего заказа более
                 <span class="font-semibold">10000 рублей.</span>
               </p>
-              <div class="text-xs lg:text-15 text-brand-dark mt-4 space-y-4">
+              <div class="text-15 text-brand-dark mt-4 space-y-4">
                 <p>
                   Бонусы начисляются при закрытии заказа.
                 </p>
@@ -370,35 +370,35 @@
             </div>
           </div>
           <!-- Main Wrapper -->
-          <div class="w-full max-w-[40.1875rem] flex flex-wrap sm:justify-between gap-5 text-brand-custom-gray">
+          <div class="w-full max-w-[40.1875rem] flex flex-col sm:flex-row sm:justify-between gap-5 text-brand-custom-gray">
             <!-- 1 -->
             <div class="w-1/2 sm:w-auto">
               <h5 class="font-semibold">Покупателям</h5>
               <div class="flex flex-col gap-2 mt-4 lg:mt-6">
-                <a class="transition duration-200 hover:opacity-75" href="#">Оплата и доставка</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Возврат товаров</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Вопросы и ответы</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Программа лояльности</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Оплата и доставка</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Возврат товаров</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Вопросы и ответы</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Программа лояльности</a>
               </div>
             </div>
             <!-- 2 -->
             <div class="w-auto">
               <h5 class="font-semibold">О компании</h5>
               <div class="flex flex-col gap-2 mt-4 lg:mt-6">
-                <a class="transition duration-200 hover:opacity-75" href="#">История</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Новости</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Вакансии</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Контакты</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">История</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Новости</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Вакансии</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Контакты</a>
               </div>
             </div>
             <!-- 3 -->
             <div class="w-auto">
               <h5 class="font-semibold">Юридическая информация</h5>
               <div class="flex flex-col gap-2 mt-4 lg:mt-6">
-                <a class="transition duration-200 hover:opacity-75" href="#">Реквизиты организации</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Лицензии и сертификаты</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Пользовательское соглашение</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Политика конфиденциальности</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Реквизиты организации</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Лицензии и сертификаты</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Пользовательское соглашение</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Политика конфиденциальности</a>
               </div>
             </div>
           </div>
