--- a/public/news.html
+++ b/public/news.html
@@ -196,7 +196,8 @@
         <!-- The Art Of Transformation -->
         <section class="lg:border-t pt-4 lg:pt-8 lg:mt-6">
           <div class="w-full max-w-[57.5rem]">
-            <h2 class="max-w-[48.5625rem] text-2xl lg:text-twenty-eight">Искусство трансформации: как хранение меняет вкус шу
+            <h2 class="max-w-[48.5625rem] text-2xl lg:text-twenty-eight">Искусство трансформации: как хранение меняет
+              вкус шу
               пуэрадля примера очень
               длинное название</h2>
             <p class="text-brand-dark lg:text-xl mt-4 lg:pr-10">
@@ -233,7 +234,7 @@
             выдержанности – чэньхуа циюнь (陈化气韵). У ещё более старого чая чэньхуа циюнь ещё более выражена и выходит на
             первый план.
           </p>
-          <div class="overflow-x-auto no-scroll mt-5 lg:mt-10 -mx-4 md:-mx-0 pl-4 md:pl-0">
+          <div class="overflow-x-auto no-scroll mt-5 lg:mt-10">
             <div class="flex gap-4 lg:gap-30">
               <!-- 1 -->
               <div class="min-w-[16.625rem] md:min-w-80 lg:min-w-350 overflow-hidden rounded-md">
@@ -267,9 +268,10 @@
           <!-- Items -->
           <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-4 lg:gap-30">
             <!-- Item 1 -->
-            <div class="bg-white rounded-md px-2 lg:px-4 py-3 lg:py-4 lg:pb-5">
+            <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
               <div class="flex justify-between gap-5">
-                <button class="button-green h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
+                <button
+                  class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
                   Популярный
                 </button>
                 <!-- Like -->
@@ -291,9 +293,9 @@
               <div class="mt-4">
                 <div class="flex gap-1">
                   <p class="font-semibold text-base/5 lg:text-2xl/6">1 450 ₽</p>
-                  <span class="font-medium text-brand-green-300 text-xs/3 lg:text-base/4">1 850 ₽</span>
+                  <span class="font-medium text-brand-black-300 line-through  text-xs/3 lg:text-base/4">1 850 ₽</span>
                 </div>
-                <h5 class="font-semibold text-xs lg:text-15 mt-2">Navy Blue Габа Улун</h5>
+                <h5 class="font-semibold text-15 mt-2">Navy Blue Габа Улун</h5>
                 <p class="text-brand-dark text-13/[1.125rem]">Черный чай т.е. категория</p>
 
                 <!-- Stars -->
@@ -308,9 +310,10 @@
               </div>
             </div>
             <!-- Item 2 -->
-            <div class="bg-white rounded-md px-2 lg:px-4 py-3 lg:py-4 lg:pb-5">
+            <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
               <div class="flex justify-between gap-5">
-                <button class="button-green h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
+                <button
+                  class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
                   Популярный
                 </button>
                 <!-- Like -->
@@ -332,9 +335,9 @@
               <div class="mt-4">
                 <div class="flex gap-1">
                   <p class="font-semibold text-base/5 lg:text-2xl/6">1 450 ₽</p>
-                  <span class="font-medium text-brand-green-300 text-xs/3 lg:text-base/4">1 850 ₽</span>
+                  <span class="font-medium text-brand-black-300 line-through  text-xs/3 lg:text-base/4">1 850 ₽</span>
                 </div>
-                <h5 class="font-semibold text-xs lg:text-15 mt-2">Navy Blue Габа Улун</h5>
+                <h5 class="font-semibold text-15 mt-2">Navy Blue Габа Улун</h5>
                 <p class="text-brand-dark text-13/[1.125rem]">Черный чай т.е. категория</p>
 
                 <!-- Stars -->
@@ -349,9 +352,10 @@
               </div>
             </div>
             <!-- Item 3 -->
-            <div class="bg-white rounded-md px-2 lg:px-4 py-3 lg:py-4 lg:pb-5">
+            <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
               <div class="flex justify-between gap-5">
-                <button class="button-green h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
+                <button
+                  class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
                   Популярный
                 </button>
                 <!-- Like -->
@@ -373,9 +377,9 @@
               <div class="mt-4">
                 <div class="flex gap-1">
                   <p class="font-semibold text-base/5 lg:text-2xl/6">1 450 ₽</p>
-                  <span class="font-medium text-brand-green-300 text-xs/3 lg:text-base/4">1 850 ₽</span>
+                  <span class="font-medium text-brand-black-300 line-through  text-xs/3 lg:text-base/4">1 850 ₽</span>
                 </div>
-                <h5 class="font-semibold text-xs lg:text-15 mt-2">Navy Blue Габа Улун</h5>
+                <h5 class="font-semibold text-15 mt-2">Navy Blue Габа Улун</h5>
                 <p class="text-brand-dark text-13/[1.125rem]">Черный чай т.е. категория</p>
 
                 <!-- Stars -->
@@ -390,9 +394,10 @@
               </div>
             </div>
             <!-- Item 4 -->
-            <div class="bg-white rounded-md px-2 lg:px-4 py-3 lg:py-4 lg:pb-5">
+            <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
               <div class="flex justify-between gap-5">
-                <button class="button-green h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
+                <button
+                  class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
                   Популярный
                 </button>
                 <!-- Like -->
@@ -414,9 +419,9 @@
               <div class="mt-4">
                 <div class="flex gap-1">
                   <p class="font-semibold text-base/5 lg:text-2xl/6">1 450 ₽</p>
-                  <span class="font-medium text-brand-green-300 text-xs/3 lg:text-base/4">1 850 ₽</span>
+                  <span class="font-medium text-brand-black-300 line-through  text-xs/3 lg:text-base/4">1 850 ₽</span>
                 </div>
-                <h5 class="font-semibold text-xs lg:text-15 mt-2">Navy Blue Габа Улун</h5>
+                <h5 class="font-semibold text-15 mt-2">Navy Blue Габа Улун</h5>
                 <p class="text-brand-dark text-13/[1.125rem]">Черный чай т.е. категория</p>
 
                 <!-- Stars -->
@@ -487,7 +492,7 @@
             вкусу на смолу пуэра, чем на шу) похабщину, заполоняющую рынок – и с каждым годом ситуация становится всё
             хуже, нормально сделанный чай превращается в редкую роскошь – и стоит соответственно…
           </p>
-          <div class="overflow-x-auto no-scroll mt-5 lg:mt-10 -mx-4 md:-mx-0 pl-4 md:pl-0">
+          <div class="overflow-x-auto no-scroll mt-5 lg:mt-10">
             <div class="flex gap-4 lg:gap-30">
               <!-- 1 -->
               <div class="min-w-72 md:min-w-96 lg:min-w-[33.75rem] overflow-hidden rounded-md">
@@ -514,7 +519,7 @@
                 <div class="pt-2 p-4">
                   <span class="text-xs text-brand-black-300">10.10.2022</span>
                   <h5 class="font-medium line-clamp-1">Стерилизация и дезинфекция</h5>
-                  <p class="text-brand-black-400 text-xs lg:text-15 line-clamp-3 mt-2">
+                  <p class="text-brand-black-400 text-15 line-clamp-3 mt-2">
                     Стерилизация и дезинфекция — важные этапы обработки инструментов, позволяющие сделать любые...
                   </p>
                   <div class="flex items-center gap-3 mt-4">
@@ -539,7 +544,7 @@
                 <div class="pt-2 p-4">
                   <span class="text-xs text-brand-black-300">10.10.2022</span>
                   <h5 class="font-medium line-clamp-1">Стерилизация и дезинфекция</h5>
-                  <p class="text-brand-black-400 text-xs lg:text-15 line-clamp-3 mt-2">
+                  <p class="text-brand-black-400 text-15 line-clamp-3 mt-2">
                     Стерилизация и дезинфекция — важные этапы обработки инструментов, позволяющие сделать любые...
                   </p>
                   <div class="flex items-center gap-3 mt-4">
@@ -564,7 +569,7 @@
                 <div class="pt-2 p-4">
                   <span class="text-xs text-brand-black-300">10.10.2022</span>
                   <h5 class="font-medium line-clamp-1">Стерилизация и дезинфекция</h5>
-                  <p class="text-brand-black-400 text-xs lg:text-15 line-clamp-3 mt-2">
+                  <p class="text-brand-black-400 text-15 line-clamp-3 mt-2">
                     Стерилизация и дезинфекция — важные этапы обработки инструментов, позволяющие сделать любые...
                   </p>
                   <div class="flex items-center gap-3 mt-4">
@@ -589,7 +594,7 @@
                 <div class="pt-2 p-4">
                   <span class="text-xs text-brand-black-300">10.10.2022</span>
                   <h5 class="font-medium line-clamp-1">Стерилизация и дезинфекция</h5>
-                  <p class="text-brand-black-400 text-xs lg:text-15 line-clamp-3 mt-2">
+                  <p class="text-brand-black-400 text-15 line-clamp-3 mt-2">
                     Стерилизация и дезинфекция — важные этапы обработки инструментов, позволяющие сделать любые...
                   </p>
                   <div class="flex items-center gap-3 mt-4">
@@ -659,35 +664,35 @@
             </div>
           </div>
           <!-- Main Wrapper -->
-          <div class="w-full max-w-[40.1875rem] flex flex-wrap sm:justify-between gap-5 text-brand-custom-gray">
+          <div class="w-full max-w-[40.1875rem] flex flex-col sm:flex-row sm:justify-between gap-5 text-brand-custom-gray">
             <!-- 1 -->
             <div class="w-1/2 sm:w-auto">
               <h5 class="font-semibold">Покупателям</h5>
               <div class="flex flex-col gap-2 mt-4 lg:mt-6">
-                <a class="transition duration-200 hover:opacity-75" href="#">Оплата и доставка</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Возврат товаров</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Вопросы и ответы</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Программа лояльности</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Оплата и доставка</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Возврат товаров</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Вопросы и ответы</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Программа лояльности</a>
               </div>
             </div>
             <!-- 2 -->
             <div class="w-auto">
               <h5 class="font-semibold">О компании</h5>
               <div class="flex flex-col gap-2 mt-4 lg:mt-6">
-                <a class="transition duration-200 hover:opacity-75" href="#">История</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Новости</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Вакансии</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Контакты</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">История</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Новости</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Вакансии</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Контакты</a>
               </div>
             </div>
             <!-- 3 -->
             <div class="w-auto">
               <h5 class="font-semibold">Юридическая информация</h5>
               <div class="flex flex-col gap-2 mt-4 lg:mt-6">
-                <a class="transition duration-200 hover:opacity-75" href="#">Реквизиты организации</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Лицензии и сертификаты</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Пользовательское соглашение</a>
-                <a class="transition duration-200 hover:opacity-75" href="#">Политика конфиденциальности</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Реквизиты организации</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Лицензии и сертификаты</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Пользовательское соглашение</a>
+                <a class="transition duration-200 hover:text-brand-green-400" href="#">Политика конфиденциальности</a>
               </div>
             </div>
           </div>
